--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -9,57 +9,161 @@
     }
   }
 
+  &__form-wrapper {
+    margin-bottom: var(--size-128);
+
+    @include respond(tab-land) {
+      margin-bottom: var(--size-256);
+    }
+  }
+
+  &__content {
+    &.content-section {
+      height: auto;
+      background-color: var(--brand-yellow);
+      padding: var(--size-64);
+
+      &::after,
+      &::before {
+        content: '';
+        left: 0;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        display: inline-block;
+        background-size: cover;
+        background: url('../../assets/menu-bg.png') center center no-repeat;
+      }
+
+      &::before {
+        transform: rotate(180deg);
+        top: calc(-1 * var(--size-128));
+      }
+
+      &::after {
+        transform: none;
+        bottom: calc(-1 * var(--size-128));
+      }
+    }
+
+    p {
+      z-index: 1;
+      width: 90%;
+      margin: 0 auto;
+      position: relative;
+      text-align: center;
+      line-height: var(--size-24);
+      font-size: var(--font-size-14);
+
+      @include respond(tab-land) {
+        font-size: var(--font-size-18);
+        line-height: var(--size-32);
+      }
+    }
+  }
+
+  &__title {
+    text-align: center;
+    color: var(--brand-orange);
+    margin: var(--size-32) 0;
+    line-height: var(--size-24);
+    padding: 0 var(--size-24);
+
+    @include respond(phone-landscape) {
+      margin: var(--size-128) 0 var(--size-12);
+    }
+
+    @include respond(tab-land) {
+      margin: var(--size-128) 0;
+    }
+  }
+
   &__form {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 0 var(--size-32);
     box-sizing: border-box;
-    padding: 0 165px;
+    margin-top: var(--size-82);
 
-    &-row {
-      display: flex;
-    }
-
-    &-col {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-    }
-
-    &-error {
-      color: red;
-    }
-
-    &-col {
-      &-item {
-        display: flex;
-        flex-direction: column;
-
-        input,
-        textarea {
-          padding: 35px 65px;
-          font-size: 42px;
-          color: #260438;
-          border-radius: 87px;
-          border: 1px solid #707070;
-          background: #ffffff;
-        }
-
-        textarea {
-          height: 501px;
-        }
-      }
+    @include respond(tab-land) {
+      padding: 0 var(--size-64);
     }
 
     button {
       width: 100%;
-      border: 1px solid #707070;
       text-transform: uppercase;
-      background-color: #ffc210;
-      border-radius: 87px;
-      padding: 34px 0;
-      font-size: 72px;
+      background-color: var(--brand-yellow);
+      border-radius: var(--size-32);
+      padding: var(--size-12) 0;
+      font-size: var(--font-size-18);
+
+      @include respond(tab-land) {
+        font-size: var(--font-size-48);
+        border-radius: var(--size-82);
+        padding: var(--size-32) 0;
+      }
+    }
+  }
+
+  &__form-row {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    @include respond(tab-land) {
+      flex-direction: row;
+    }
+  }
+
+  &__form-col {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    @include respond(tab-land) {
+      width: 48%;
+    }
+
+    &--full {
+      width: 100%;
+    }
+  }
+
+  &__form-error {
+    color: red;
+    position: absolute;
+    font-size: var(--font-size-14);
+    padding-left: var(--size-16);
+    bottom: var(--size-10);
+
+    @include respond(tab-land) {
+      font-size: var(--font-size-18);
+    }
+  }
+
+  &__form-col-item {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    input,
+    textarea {
+      display: flex;
+      border-radius: var(--size-32);
+      padding: var(--size-12) var(--size-24);
+      font-size: var(--font-size-18);
+      color: var(--brand-main);
+      background: var(--white);
+      box-sizing: border-box;
+      margin-bottom: var(--size-32);
+
+      @include respond(tab-land) {
+        border-radius: var(--size-82);
+        padding: var(--size-32) var(--size-64);
+        font-size: var(--font-size-32);
+      }
     }
   }
 }
