--- a/src/pages/Contact/Contact.scss
+++ b/src/pages/Contact/Contact.scss
@@ -98,6 +98,7 @@
       border-radius: var(--size-32);
       padding: var(--size-12) 0;
       font-size: var(--font-size-18);
+      cursor: pointer;
 
       @include respond(tab-land) {
         font-size: var(--font-size-48);
